downgrade to java 11 according to the exercise specification