@@ -3,6 +3,7 @@ package org.example.accessor;
 import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.example.error.ApplicationException;
@@ -23,7 +24,8 @@ public final class MethodAccessorClass extends AccessorClass {
     stringBuilder.append("2a ").append(pckClassName).append(" : ");
     try {
       final Class<?> classObject = Class.forName(pckClassName);
-      final List<String> methodNameList = Stream.of(classObject.getDeclaredMethods()).limit(topN).map(Method::toString).toList();
+      final List<String> methodNameList = Stream.of(classObject.getDeclaredMethods()).limit(topN).map(Method::toString)
+        .collect(Collectors.toList());
       stringBuilder.append(String.join(", ", methodNameList)).append(System.lineSeparator());
     } catch (ClassNotFoundException e) {
       throw new ApplicationException(e);
@@ -34,7 +36,7 @@ public final class MethodAccessorClass extends AccessorClass {
   public void getDeclaredAndInherited(List<String> fieldList, String pckClassName) {
     try {
       Class<?> classObject = Class.forName(pckClassName);
-      fieldList.addAll(Arrays.stream(classObject.getDeclaredMethods()).limit(topN).map(Method::toString).toList());
+      fieldList.addAll(Arrays.stream(classObject.getDeclaredMethods()).limit(topN).map(Method::toString).collect(Collectors.toList()));
       if (classObject.getSuperclass() != null && fieldList.size() < topN) {
         getDeclaredAndInherited(fieldList, classObject.getSuperclass().getTypeName());
       }
